# Data-Com.-Game

./: LICENSE  README.md
client/: README.md  client.py  client_core.py  drawing_utils.py  game.py  game_loop.py  game_types.py  global_state.py  main.py  main_game_ui.py  main_game_ui_sub_menus.py  menu.py  pyproject.toml  sample_client.py  server_cmd_parser.py  socket_client.py  stratego.py  stratego_client.py  stratego_display.py
client/common_types/: __init__.py  game_types.py  global_state.py  server_types.py
client/docs/: .gitignore  build_docs.bat  conf.py  index.rst
client/example_files/: client_core_example.py  drag_drop.py  game_loop_example.py  game_settings_test.py  menu_example.py
client/games/: __init__.py
client/games/lore/: lore_engine.py  lore_types.py  lore_unlocking.py  lore_update.py
client/games/secret_dlc_store/: dlc_networking.py  download_and_run_second_secret_game.py  secret_dlc_store.py  secret_dlc_store_update.py
client/games/secret_game/: secret_game_background_activator.py  secret_game_game.py  secret_game_types.py
client/games/secret_paint_game/: secret_paint_game_launcher.py  (+1 more)
client/networking/: __init__.py  server_cmd_interpreter.py  server_cmd_parser.py  server_cmd_reader.py  socket_client.py  validator.py
client/stratego/: deck_selection.py  stratego_display.py  stratego_game.py  stratego_types.py
client/ui/: __init__.py  drawing_utils.py  main_game_ui.py  main_game_ui_sub_menus.py  music_player.py  secret_game_background_activator.py  sprite_repository.py
client/word_golf/: word_golf_game.py  word_golf_types.py
(+38 files in other folders)
