[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "furo>=2025.9.25",
    "pygame>=2.6.1",
    "pygame-menu>=4.5.2",
    "sphinx>=8.2.3",
]

[tool.uv.workspace]
members = [
    "games/secret_paint_game/web_game_runner",
]
